Replaced scrollbar with progress bar and fixed some styling issues

--- a/src/index.css
+++ b/src/index.css
@@ -57,13 +57,6 @@ body {
     @apply bg-gradient-to-l from-[#030712] to-black;
 }
 
-/* Scrollbar styles */
-.light-theme-scrollbar::-webkit-scrollbar {
-    /* display: none; */
-    background-color: white;
-}
-
-.dark-theme-scrollbar::-webkit-scrollbar {
-    /* display: none; */
-    background-color: black;
+::-webkit-scrollbar {
+    display: none;
 }
